Update Kotlin version / support JDK24
IMPORTANT: With latest Kotlin, we got a warning that
Kotlin 1.7 is no longer supported, so we've bumped up
our minimum access to 1.8 as well (while incrementing
our minor version to indicate this potentially
non-backwards compatible change)

JDK24 requires updating all examples to opt-in to
restricted native method access, as otherwise it
spits out a very annoying warning.

We also update all examples to add compiler flags to
show users how to disable this message.